implementing CQRS pattern and adding services for Vote Entity

--- a/eVotingAPI/eVoting/appsettings.json
+++ b/eVotingAPI/eVoting/appsettings.json
@@ -9,5 +9,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Database": {
+    "eVotingConnectionString": "Data Source=SQL5105.site4now.net;Initial Catalog=db_a8249d_evoting;User Id=db_a8249d_evoting_admin;Password=P@ssw0rd"
+  },
   "AllowedHosts": "*"
 }
