implementing get cities endpoint and adding automapper library

--- a/eVotingAPI/eVoting/eVoting.App.csproj
+++ b/eVotingAPI/eVoting/eVoting.App.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.10" />
@@ -21,10 +22,6 @@
   <ItemGroup>
     <ProjectReference Include="..\eVoting.Core\eVoting.Core.csproj" />
     <ProjectReference Include="..\Model\eVoting.Model.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Framework\" />
   </ItemGroup>
 
 </Project>
